[package]
name = "bridgehead-monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop" }
clap = { version = "4.3", features = ["env", "derive"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.28"
once_cell = "1"
serde_json = "1"
